new card component created

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,55 +4,15 @@
   justify-content: flex-start;
 }
 
-/* Aside / nav tab -------------------------- */
-#aside-tab-container {
-  padding: 40px;
-  background-color: var(--aside-bar-background-color);
-  box-shadow: var(--aside-bar-box-shadow);
-  width: 300px;
-  top: 0;
-  bottom: 0;
-  position: fixed;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-}
-
-.navigation-tag {
-  margin-top: 30px;
-}
-
-.nav-items-container {
-  list-style-type: none;
-}
-
-.nav-items-container a {
-  width: 100%;
-}
-
-.nav-item {
-  display: flex;
-  cursor: pointer;
-
-  padding: 9px 0 9px 8px;
-  margin: 4px 0 4px;
-  border-radius: 8px;
-}
-
-.nav-item p {
-  margin-left: 10px;
-}
-
-.nav-item:hover {
-  background-color: var(--nav-hover-color);
-}
-
 #main-section-outermost-container {
   background-color: var(--main-section-background-color);
   margin-left: 300px;
   min-height: 100vh;
   min-width: calc(100vw - 300px);
-  padding: 50px 60px 100px 60px;
+  padding: 50px 60px 100px 140px;
+}
+
+.main-title {
+  font-size: 2.5rem;
+  margin-bottom: 50px;
 }
