--- a/frontend/src/components/news_card/news_card.css
+++ b/frontend/src/components/news_card/news_card.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  border-bottom: 1px rgb(63, 63, 63) solid;
+  border-bottom: 1px var(--division-border-color) solid;
   cursor: pointer;
 }
 
