created the initial login page connected with the backend, using a JSON file as database

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
   min-height: 100vh;
   min-width: calc(100vw - 300px);
   padding: 50px 250px 100px 140px;
+  position: relative;
 }
 
 .main-title {
