creating the upload news page

--- a/frontend/src/components/add_news/add_news.css
+++ b/frontend/src/components/add_news/add_news.css
@@ -17,3 +17,10 @@
   width: 200px;
   margin-top: 10px;
 }
+
+.news-created-msg {
+  height: 24px;
+  margin-top: 10px;
+  margin-bottom: 0;
+  font-weight: bold;
+}
