--- a/frontend/src/components/nav_bar/nav_bar.css
+++ b/frontend/src/components/nav_bar/nav_bar.css
@@ -49,11 +49,16 @@
 
 }
 
+.log-out-icon {
+  color: var(--main-text-color);
+}
+
 .nav-item:hover {
   background-color: var(--nav-hover-color);
 }
 
-.log-out-container:hover p {
+.log-out-container:hover p,
+.log-out-container:hover .log-out-icon {
   color: rgb(255, 48, 48);
   font-weight: bold;
 }
